Qr code display fix, issuer in claims OK